--- a/src/components/TaskList/TaskList.module.css
+++ b/src/components/TaskList/TaskList.module.css
@@ -1,8 +1,9 @@
 .list {
-  padding: 0;
   margin: 0;
+  padding: 0;
   list-style: none;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 12px;
+}
+
+.listItem + .listItem {
+  border-top: 1px solid #2f2f37;
 }
